# ArmBench-Control_TestBed_for_Robotic_Arms

./: LICENSE  Readme.md
InterbotixDriver/install/: local_setup.sh  setup.sh
InterbotixDriver/log/: latest_build
arm_bench_dev/: .gitignore  README.md  SEGFAULT_FIXED.md  examples.py  fix_opencv_segfault.sh  pyproject.toml  test_controller.py
arm_bench_dev/arm_bench_dataset_20251202_143528/: metadata.json  trajectory_data.json
arm_bench_dev/arm_bench_dataset_20251202_185008/: metadata.json  trajectory_data.json
arm_bench_dev/arm_bench_dataset_20251203_031430/: metadata.json  trajectory_data.json
arm_bench_dev/examples/: EXAMPLES.md  pd_controller_config.json  pid_controller_config.json
arm_bench_dev/src/arm_bench/: __init__.py  bilateral_control.py  bimanual.py  cli.py  control.py  dynamixel_control.py  gui.py  interbotix_builder.py  kinematics.py  matlab_integration.py  matlab_integration_enhanced.py  matlab_integration_gui.py  matlab_integration_ui.py  monitoring_subprocess.py  rlds_recorder.py  ros2_bridge.py  scanner.py  teleoperation.py  visualization.py
arm_bench_dev/src/arm_bench/webxr/: __init__.py  server.py
arm_bench_dev/src/arm_bench/webxr/certs/: cert.pem  key.pem
arm_bench_dev/src/arm_bench/webxr/static/: index.html  teleop.js
control_simulator/: QUICKSTART.md  README.md  api_examples.py  control_simulator_gui.py  matlab_engine_interface.py  parameter_tuner.py  requirements.txt  run_simulator.sh  test.json  test_simulator.py
control_simulator/configs/: lqr_example.json  pid_example.json
control_simulator/matlab_scripts/: lqr_controller.m  mpc_controller.m  pid_controller.m  run_control_sim.m
control_simulator/results/: test1.json
report/: manipulator_teleop_report.tex
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/bilateral_teleop/share/bilateral_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/log/: latest_build
ros_ws/src/arm_launch/: CMakeLists.txt  package.xml
ros_ws/src/arm_launch/params/: bilateral_params.yaml
ros_ws/src/bilateral_node/: setup.cfg  setup.py
ros_ws/src/bilateral_node/bilateral_node/: bilateral_kinematics_pink.py  bilateral_node.py
ros_ws/src/bilateral_teleop/: README.md  setup.cfg  setup.py
ros_ws/src/config_teleop/: package.xml  setup.cfg  setup.py
ros_ws/src/moveit_2_config/: CMakeLists.txt
ros_ws/src/teleoperation_hopefully/: setup.cfg  setup.py
(+835 files in other folders)
