<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bilateral_teleop</name>
  <version>1.0.0</version>
  <description>Bilateral teleoperation between ReactorX-150 (5DOF) and ViperX-300s (6DOF) using MoveIt2</description>
  <maintainer email="sp@todo.todo">sp</maintainer>
  <license>MIT</license>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- MoveIt2 dependencies -->
  <depend>moveit_msgs</depend>
  <depend>pymoveit2</depend>
  
  <!-- Interbotix dependencies -->
  <depend>interbotix_xs_msgs</depend>
  <depend>interbotix_xsarm_control</depend>
  
  <!-- Launch dependencies -->
  <exec_depend>ros2launch</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
